# asset-hub

./: .env  .gitignore  .solitarc.js  Anchor.toml  CHAGELOG.md  Cargo.toml  README.md  assembler copy 2.json  assembler copy.json  assembler.json  bak_cust_deployments.json  deployments.json  key.json  lfg.sh  package.json  tsconfig.json
idl/: anchor_template.json  assembler.json  assetmanager.json
programs/anchor-template/src/: lib.rs
programs/assembler/: Cargo.toml
programs/assembler/src/: errors.rs  lib.rs  structs.rs  utils.rs
programs/assembler/src/instructions/: assembler.rs  block.rs  mod.rs  nft.rs
programs/assembler/src/state/: assembler.rs  block.rs  mod.rs  nft.rs
programs/assembler/src/utils/: metadata.rs  mod.rs
programs/assetmanager/: Cargo.toml
programs/assetmanager/src/: errors.rs  lib.rs  structs.rs
programs/assetmanager/src/instructions/: assetmanager.rs  assets.rs  mod.rs
programs/guild-kit/: Cargo.toml
programs/guild-kit/src/: lib.rs
programs/hpl-asset-assembler/: Cargo.toml
programs/hpl-asset-assembler/src/: errors.rs  lib.rs
programs/hpl-asset-assembler/src/instructions/: assembler.rs  block.rs  nft.rs
programs/hpl-asset-assembler/src/state/: assembler.rs  block.rs  mod.rs
programs/hpl-asset-manager/: Cargo.toml
programs/hpl-asset-manager/src/: lib.rs  states.rs
programs/hpl-asset-manager/src/instructions/: assets.rs
programs/hpl-character-manager/: Cargo.toml
programs/hpl-character-manager/src/: bubblegum.rs  errors.rs  events.rs  lib.rs  metadata.rs
programs/hpl-character-manager/src/instructions/: character_instructions.rs  custody_instructions_cnft.rs  custody_instructions_nft.rs  mod.rs  model_instructions.rs  wrap_instructions.rs
programs/hpl-character-manager/src/state/: character.rs  character_model.rs  custody.rs  mod.rs
programs/hpl-currency-manager/: Cargo.toml
programs/hpl-currency-manager/src/: errors.rs  lib.rs  utils.rs
programs/hpl-currency-manager/src/instructions/: currency.rs  holder.rs
programs/hpl-currency-manager/src/state/: currency_state.rs  events.rs  holder_state.rs  mod.rs
programs/hpl-payment-manager/: Cargo.toml
programs/hpl-payment-manager/src/: errors.rs  lib.rs
programs/hpl-payment-manager/src/instructions/: mod.rs  payment_instructions.rs  payment_structure_instructions.rs
programs/hpl-payment-manager/src/state/: mod.rs  payment_session_state.rs  payment_structure_state.rs
programs/hpl-payment-manager/src/utils/: conditional.rs  events.rs  mod.rs
programs/hpl-resource-manager/: Cargo.toml  expanded.rs
programs/hpl-resource-manager/src/: errors.rs  lib.rs
programs/hpl-resource-manager/src/instructions/: craft.rs  holding.rs  mod.rs  recipe.rs  resource.rs  unwrap.rs  wrap.rs
programs/hpl-resource-manager/src/state/: holding_state.rs  mod.rs  recipe_state.rs  resource_state.rs
programs/hpl-resource-manager/src/states/: holding_state.rs  mod.rs  recipe_state.rs  resource_state.rs
programs/hpl-resource-manager/src/utils/: burn.rs  mint.rs  mod.rs  token.rs
programs/staking/: Cargo.toml
programs/staking/src/: errors.rs  lib.rs  utils.rs
programs/staking/src/instructions/: migrate_from.rs  mod.rs  multiplier_instructions.rs  project_instructions.rs  reward_instructions.rs  stake_instructions.rs
programs/staking/src/state/: mod.rs  nft_state.rs  project_state.rs
scripts/: assembler.ts  assetmanager.ts  index.ts  postbuild.js  postinstall.js  prepare.ts  rollout.js  staking.ts  types.ts  utils.ts
scripts/assembler/: create_and_mint_nft.ts  create_assembler.ts  create_block.ts  create_block_definition.ts  disband_nft.ts  index.ts
src/: index.ts  node-utils.ts  types.ts  utils.ts
src/assembler/: index.ts
src/assembler/accounts/: Block.ts  BlockDefinition.ts  BlockDefinitionBoolean.ts  BlockDefinitionEnum.ts  BlockDefinitionNumber.ts  NFTAttribute.ts  index.ts
src/assembler/errors/: index.ts
src/assembler/instructions/: addBlock.ts  burnNft.ts  createBlockDefinitionBoolean.ts  createBlockDefinitionEnum.ts  createBlockDefinitionNumber.ts  index.ts
src/assembler/types/: AssemblingAction.ts  BlockDefinitionValue.ts  BlockType.ts  CreateAssemblerArgs.ts  CreateBlockArgs.ts  CreateBlockDefinitionBooleanArgs.ts  CreateBlockDefinitionEnumArgs.ts  CreateBlockDefinitionNumberArgs.ts  index.ts
src/assetmanager/: index.ts
src/assetmanager/instructions/: initialize.ts
src/idl/: assembler.ts  assetmanager.ts  hpl_asset_assembler.ts  index.ts  staking.json  staking.ts
src/instructions/: initialize.ts
src/sdk/: index.ts  pdas.ts
src/sdk/assembler/: createAndMintNft.ts  createAssembler.ts  createBlock.ts  createBlockDefinition.ts  createDelegateAuthority.ts  create_and_mint_nft.ts  create_assembler.ts  create_block.ts  create_block_definition.ts  disbandNft.ts  disband_nft.ts  index.ts  pdas.ts  setNftGenerated.ts  setupAssembler.ts  updateAssembler.ts
src/sdk/assetmanager/: associatedTokenAccounts.ts  createAsset.ts  createAssetManager.ts  index.ts  mintAsset.ts
src/sdk/staking/: addMultiplier.ts  claimRewards.ts  createStakingProject.ts  fetch.ts  fundRewards.ts  index.ts  initMultipliers.ts  initNFT.ts  initStaker.ts  stake.ts  unstake.ts  updateStakingProject.ts  withdrawRewards.ts
src/types/: AssemblerConfig.ts  index.ts
tests/: compression.ts  hash.ts  helius.ts  hpl-character-manager.high.test.ts  hpl-character-manager.low.test.ts  hpl-currency-manager.test.ts  hpl-payment-manager.test.ts  hpl-resource-manager.high.test.ts  hpl-resource-manager.low.test.ts  metadata.ts  parser.ts  prepare.ts  resource-manager-test-data.json  temp.test.ts
