[workspace]
members = ["programs/*"]

[workspace.package]
authors = ["Sultan Nadeem <sultanndilaram@gmail.com>"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.28.0" }
anchor-spl = "0.28.0"
hpl-macros = "0.0.2"
hpl-utils = "=0.1.11"
hpl-compression = { version = "=0.1.8-beta.14" }
hpl-toolkit = { version = "0.0.3-beta.4" }
hpl-events = { version = "=0.1.24", features = ["no-entrypoint"] }
hpl-hive-control = { version = "0.2.19-beta.2", features = ["cpi"] }
hpl-currency-manager = { version = "0.0.83-beta.1", path = "programs/hpl-currency-manager", features = [
  "cpi",
] }
mpl-bubblegum = { version = "1.1.0" }
mpl-token-metadata = { version = "=1.13.2", features = ["no-entrypoint"] }
spl-account-compression = { version = "0.2.0", features = ["cpi"] }
