[workspace]
members = ["programs/hpl-resource-manager"]

[workspace.package]
authors = ["Sultan Nadeem <sultanndilaram@gmail.com>"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.29.0" }
anchor-spl = "0.29.0"
hpl-hive-control = { version = "0.2.19-beta.9", features = ["cpi"] }
hpl-toolkit = { version = "0.0.3-beta.12" }
mpl-bubblegum = { version = "1.1.0" }
spl-token-2022 = { version = "2.0", features = ["no-entrypoint"] }
spl-account-compression = { version = "0.3.0", features = ["cpi"] }
spl-token-metadata-interface = { version = "0.2.0" }
spl-token-group-interface = { version = "0.1.1" }
hpl-currency-manager = { version = "0.0.84-beta.2", path = "programs/hpl-currency-manager", features = [
  "cpi",
] }
