[workspace]
members = [
  "programs/hpl-character-manager",
  "programs/hpl-currency-manager",
  "programs/hpl-payment-manager",
]

[workspace.package]
authors = ["Sultan Nadeem <sultanndilaram@gmail.com>"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.29.0" }
anchor-spl = "0.29.0"
hpl-toolkit = { version = "0.0.3-beta.14" }
# hpl-hive-control = { version = "0.2.19-beta.11", features = ["cpi"] }
hpl-hive-control = { path = "../hive-control/programs/hpl-hive-control", features = ["cpi"] }
hpl-currency-manager = { path = "programs/hpl-currency-manager", features = [
  "cpi",
] }
mpl-bubblegum = { version = "1.1.0" }
mpl-token-metadata = { version = "=1.13.2", features = ["no-entrypoint"] }
spl-account-compression = { version = "0.3.0", features = ["cpi"] }
