[package]
name = "assembler"
description = "Honeycomb protocol library assembler program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "assembler"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
mpl-token-metadata = { version="1.8.0", features = [ "no-entrypoint" ] }
hpl-utils = "0.1.0"
