[package]
name = "assetmanager"
description = "Honeycomb protocol library assetmanager program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "assetmanager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
mpl-token-metadata = { version="1.4.3", features = [ "no-entrypoint" ] }
