[package]
name = "guild-kit"
description = "Honeycomb protocol library guild kit program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "guild_kit"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
