[package]
name = "hpl-asset-assembler"
description = "Honeycomb protocol library assembler program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
version = "0.0.77"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "hpl_asset_assembler"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
hpl-macros = "0.0.2"
hpl-utils = "0.1.11"
hpl-events = { version = "0.1.24", features = ["no-entrypoint"] }
hpl-hive-control = { version = "0.2.13", features = ["cpi"] }
mpl-token-metadata = { version = "=1.13.2", features = ["no-entrypoint"] }
