[package]
name = "hpl-asset-assembler"
description = "Honeycomb protocol library assembler program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
version = "0.0.77"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "hpl_asset_assembler"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
hpl-macros = { workspace = true }
hpl-utils = { workspace = true }
hpl-events = { workspace = true }
hpl-hive-control = { workspace = true }
mpl-token-metadata = { workspace = true }
