[package]
name = "hpl-asset-manager"
description = "Honeycomb protocol library asset manager program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
version = "0.0.26"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "hpl_asset_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
getrandom = { version = "0.2.9", features = ["custom"] }
solana-program = "=1.14.17"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
hpl-utils = "0.1.7"
hpl-hive-control = { version="0.1.7", features = ["cpi"] }
mpl-token-metadata = { version="1.9.0", features = [ "no-entrypoint" ] }