[package]
name = "hpl-asset-manager"
description = "Honeycomb protocol library asset manager program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
version = "0.0.77"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "hpl_asset_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
hpl-toolkit = { workspace = true, features = [
  "macros",
], default-features = false }

hpl-utils = { workspace = true }
hpl-events = { workspace = true }
hpl-hive-control = { workspace = true }
mpl-token-metadata = { workspace = true }
