[package]
name = "hpl-character-manager"
description = "Honeycomb protocol library asset manager program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
version = "0.0.2-beta.8"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "hpl_character_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
hpl-macros = { workspace = true }
hpl-utils = { workspace = true }
hpl-events = { workspace = true }
hpl-compression = { workspace = true }
hpl-hive-control = { workspace = true }
mpl-bubblegum = { workspace = true }
spl-account-compression = { workspace = true }
