cargo-features = ["workspace-inheritance"]

[package]
name = "hpl-character-manager"
description = "Honeycomb protocol library asset manager program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
version = "0.0.2-beta.15"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "hpl_character_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
hpl-toolkit = { workspace = true, features = ["full"] }
hpl-hive-control = { workspace = true }
mpl-bubblegum = { workspace = true }
mpl-token-metadata = { version = "0.1.0" }
spl-account-compression = { workspace = true }
