[package]
name = "hpl-currency-manager"
description = "Honeycomb protocol library currency manager program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
version = "0.0.73"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "hpl_currency_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
getrandom = { version = "0.2.9", features = ["custom"] }
solana-program = "=1.14.17"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
hpl-utils = "0.1.4"
hpl-events = { version = "0.1.21", features = ["no-entrypoint"] }
hpl-hive-control = { version = "0.2.0", features = ["cpi"] }
mpl-token-metadata = { version = "1.9.0", features = ["no-entrypoint"] }
hpl-macros = { version = "0.0.2" }
