cargo-features = ["workspace-inheritance"]

[package]
name = "hpl-currency-manager"
description = "Honeycomb protocol library currency manager program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
version = "0.0.83-beta.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hpl_currency_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
hpl-macros = { workspace = true }
hpl-utils = { workspace = true }
hpl-events = { workspace = true }
hpl-hive-control = { workspace = true }
