cargo-features = ["workspace-inheritance"]

[package]
name = "hpl-currency-manager"
description = "Honeycomb protocol library currency manager program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
version = "0.0.84-beta.4"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "hpl_currency_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
hpl-toolkit = { workspace = true, features = [
  "macros",
], default-features = false }
hpl-hive-control = { workspace = true }
mpl-token-metadata = { workspace = true }
