[package]
name = "hpl-payment-manager"
description = "Honeycomb protocol library payment manager program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
version = "0.0.5"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "hpl_payment_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
hpl-macros = { workspace = true }
hpl-utils = { workspace = true }
hpl-events = { workspace = true }
hpl-hive-control = { workspace = true }
hpl-currency-manager = { workspace = true }
mpl-bubblegum = { workspace = true }
spl-account-compression = { workspace = true }
