cargo-features = ["workspace-inheritance"]

[package]
name = "hpl-payment-manager"
description = "Honeycomb protocol library payment manager program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
version = "0.0.6-beta.2"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "hpl_payment_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
hpl-toolkit = { workspace = true, features = [
  "macros",
], default-features = false }
hpl-hive-control = { workspace = true }
hpl-currency-manager = { workspace = true }
mpl-token-metadata = { version = "0.1.0" }
mpl-bubblegum = { workspace = true }
spl-account-compression = { workspace = true }
