[package]
name = "hpl-resource-manager"
description = "Honeycomb protocol library resource manager program"
author = ['ShayanHussainSB <shayanhussain48@gmail.com>']
version = "0.0.5"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "hpl_resource_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ['init-if-needed'] }
anchor-spl = { workspace = true }
hpl-toolkit = { workspace = true }
hpl-hive-control = { workspace = true }
mpl-bubblegum = { workspace = true }
spl-account-compression = { workspace = true }
spl-token-2022 = { workspace = true }
spl-token-metadata-interface = { workspace = true }
